feat: Update app title and loading spinner
Refine the application title to "ລະບົບບັນທຶກການເງິນ" for better clarity and add a favicon. Enhance the loading spinner component with a wallet icon and improved styling for a more visually appealing experience.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="theme-color" content="#059669">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <title>ລະບົບບັນທຶກລາຍຮັບ-ລາຍຈ່າຍ</title>
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>💸</text></svg>">
+    <title>ລະບົບບັນທຶກການເງິນ</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Lao:wght@400;500;700;900&display=swap" rel="stylesheet">
     <style>
